--- a/subsite/index.html
+++ b/subsite/index.html
@@ -3,9 +3,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <title></title>
+        <title>Coursera Test</title>
     </head>
     <body>
-        
+        <h1>Cousera Test</h1>
     </body>
 </html>
